# Multilayer-Perceptron-From-Scratch

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  RUN
Control/: control_pass.py
Other code/csv_loading/: reader.cpp
boost_tests/: CMakeLists.txt  MatrixAdditionSubtractionTest.cpp  MatrixComposedOperationsTest.cpp  MatrixDataAlignment.cpp  MatrixElementwiseOperationsTest.cpp  MatrixMultiplicationAdditionTest.cpp  MatrixMultiplicationTest.cpp
src/: CMakeLists.txt  main.cpp  requirements.md
src/Algebra/: CMakeLists.txt  DimensionsIncompatibleException.hpp  Matrix.cpp  Matrix.h
src/Toolkit/: fileHandler.cpp  fileHandler.h
src/networks/: Classifier.cpp  Classifier.h  FeedForwardNN.cpp  FeedForwardNN.h
src/optimizers/: Adam.hpp  AdamW.hpp  Optimizer.hpp  SGD.hpp
